--- a/content/tutorials/next-js-and-shopify-store/deploying-to-vercel.mdx
+++ b/content/tutorials/next-js-and-shopify-store/deploying-to-vercel.mdx
@@ -1,18 +1,18 @@
 # Deploying to Vercel
 
-In this final section of our tutorial, we are going to be learning how to deploy our Next.js and Shopify application live to Vercel. 
+In this final section of our tutorial, we are going to be learning how to deploy our Next.js and Shopify application live to Vercel.
 
 First, if you do not already have a free account with Vercel, you will need to create one at [https://vercel.com/signup](https://vercel.com/signup). We recommend using your GitHub account to do so.
 
-![Screen Shot 2022-01-03 at 12.03.35 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.03.35_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.03.35_PM.png)
 
 Once you are logged in, click on the “New Project” button. You will then be presented with a screen where you can import your Git Repository. Find your repo and click the blue “Import” button next to it.
 
-![Screen Shot 2022-01-03 at 12.06.05 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.06.05_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.06.05_PM.png)
 
 Vercel will automatically detect that we are using Next.js and setup the build and output settings for us. However, we modified the name of the build directory so we will need to update that. Click on the “Build and Output Settings dropdown” and then toggle the “Override” next to the “Output Directory”
 
-![Screen Shot 2022-01-03 at 12.08.56 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.08.56_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.08.56_PM.png)
 
 Next, we will need to add our environment variables. Toggle the “Environment Variables” dropdown. Then add each environment variable within the `.env.local` in the root of the project repo. For reference, mine looks like this:
 
@@ -24,19 +24,19 @@ NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN=nextjs-ecommerce-demo.myshopify.com
 
 You will have to add each variable one at a time. Once all of them have been added, it should look like this:
 
-![Screen Shot 2022-01-03 at 12.12.17 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.12.17_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.12.17_PM.png)
 
 Finally, click on the “Deploy” button. If you have done everything correctly, you should be presented with a Congratulations screen.
 
-![Screen Shot 2022-01-03 at 12.15.00 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.15.00_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.15.00_PM.png)
 
 After clicking on the “Go to Dashboard” button you will be taken to the dashboard of your application.
 
-![Screen Shot 2022-01-03 at 12.15.58 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.15.58_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.15.58_PM.png)
 
 You can then click on the “Visit” button to see your live application.
 
-![Screen Shot 2022-01-03 at 12.15.36 PM.png](Deploying%20%20226f7/Screen_Shot_2022-01-03_at_12.15.36_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/deploying-to-vercel/Screen_Shot_2022-01-03_at_12.15.36_PM.png)
 
 ## Wrap Up
 
