--- a/content/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions.mdx
+++ b/content/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions.mdx
@@ -1,22 +1,19 @@
 # Running Our Tests with GitHub Actions
 
-# GitHub Actions
-
-Now that we have a few tests written for our Next.js store, let's setup [GitHub Actions](https://github.com/features/actions) to run our Cypress tests against our app every time we make a pull request. This way we can be sure that our latest changes have not broken anything within the app. 
+Now that we have a few tests written for our Next.js store, let's setup [GitHub Actions](https://github.com/features/actions) to run our Cypress tests against our app every time we make a pull request. This way we can be sure that our latest changes have not broken anything within the app.
 
 ## Configuring GitHub Actions
 
-Now that our repo is up on GitHub, we will need to create a GitHub actions config file. 
+Now that our repo is up on GitHub, we will need to create a GitHub actions config file.
 
 Create a new file called `.github/workflows/main.yml`
 
-![Screen Shot 2021-12-16 at 1.22.23 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.22.23_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.22.23_PM.png)
 
 Next we will give our workflow a name:
 
 ```yaml
 name: E2E on Chrome
-
 ```
 
 Then tell GitHub when to run this action:
@@ -61,7 +58,7 @@ You can find the documentation for this action [here](https://github.com/cypress
 Finally, we need to pass in our env variables we currently live in the `.env.local` file.
 
 ```yaml
-env:        
+env:
   COMMERCE_PROVIDER: ${{ secrets.COMMERCE_PROVIDER }}
   NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN: ${{ secrets.NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN }}
   NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
@@ -87,36 +84,36 @@ jobs:
           browser: chrome
           build: npm run build
           start: npm run start
-          wait-on: 'http://localhost:3000'
+          wait-on: "http://localhost:3000"
         env:
           COMMERCE_PROVIDER: ${{ secrets.COMMERCE_PROVIDER }}
           NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN: ${{ secrets.NEXT_PUBLIC_SHOPIFY_STORE_DOMAIN }}
           NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN: ${{ secrets.NEXT_PUBLIC_SHOPIFY_STOREFRONT_ACCESS_TOKEN }}
 ```
 
-Now we need to add the values for these environment variables within GitHub so that our workflow has access to them. 
+Now we need to add the values for these environment variables within GitHub so that our workflow has access to them.
 
 ## Adding GitHub Secrets
 
 At the top of your repo in GitHub, click on "Settings"
 
-![Screen Shot 2021-12-16 at 1.34.47 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.34.47_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.34.47_PM.png)
 
 In the left sidebar, click on "Secrets"
 
 Then click on the "New repository secret" button in the top right.
 
-![Screen Shot 2021-12-16 at 1.35.35 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.35.35_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.35.35_PM.png)
 
 Now you can just add the key and value of the three env variables within the `.env.local` file.
 
-![Screen Shot 2021-12-16 at 1.37.05 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.37.05_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.37.05_PM.png)
 
-![Screen Shot 2021-12-16 at 1.37.20 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.37.20_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.37.20_PM.png)
 
-![Screen Shot 2021-12-16 at 1.37.35 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.37.35_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.37.35_PM.png)
 
-![Screen Shot 2021-12-16 at 1.37.42 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.37.42_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.37.42_PM.png)
 
 Next, within your terminal, checkout a new branch in git.
 
@@ -134,34 +131,33 @@ git push origin github-actions-cypress-tests
 
 After your new branch has been pushed up, click on the "Code" link at the top of your repo.
 
-![Screen Shot 2021-12-16 at 1.41.22 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.41.22_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.41.22_PM.png)
 
 Then click on the "Compare & pull request" button to create a new PR.
 
-![Screen Shot 2021-12-16 at 1.41.28 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.41.28_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.41.28_PM.png)
 
 Then click "Create pull request"
 
-![Screen Shot 2021-12-16 at 1.42.47 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.42.47_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.42.47_PM.png)
 
 You will now see the GitHub Actions workflow running. If you click on "Details" you can watch all of the steps inside of the workflow run.
 
-![Screen Shot 2021-12-16 at 1.43.33 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.43.33_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.43.33_PM.png)
 
 You will see that one of our tests has failed.
 
-![Screen Shot 2021-12-16 at 1.45.10 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.45.10_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.45.10_PM.png)
 
 It looks like Cypress could not find our product on the search results page. Let's run this test locally and make sure it is passing.
 
-![Screen Shot 2021-12-16 at 1.49.08 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_1.49.08_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_1.49.08_PM.png)
 
-We know that this test was passing locally, so why is it failing in CI?  
+We know that this test was passing locally, so why is it failing in CI?
 
 Our error says the following:
 
 > AssertionError: Timed out retrying after 4000ms: Expected to find element: `[data-test="product-tag"]`, but never found it.
-> 
 
 So it seems like the first part of our test is working, but once we get to the search results page it cannot find the `product-tag` element. We will add some `data-test` attributes to the `components/product/ProductCard.tsx` component. Around line `73`
 
@@ -326,17 +322,17 @@ export default ProductCard
 And update our test to be the following:
 
 ```jsx
-it('the search bar returns the correct search results', () => {
-    cy.getBySel('search-input').eq(0).type('linux{enter}')
+it("the search bar returns the correct search results", () => {
+  cy.getBySel("search-input").eq(0).type("linux{enter}")
 
-    cy.get('[data-test="product-card"]').within(() => {
-      cy.get('[data-test="product-name"]').should('contain', 'Linux Shirt')
-      cy.get('[data-test="product-price"]').should('contain', '$25.00 USD')
-    })
+  cy.get('[data-test="product-card"]').within(() => {
+    cy.get('[data-test="product-name"]').should("contain", "Linux Shirt")
+    cy.get('[data-test="product-price"]').should("contain", "$25.00 USD")
   })
+})
 ```
 
-![Screen Shot 2021-12-16 at 2.10.23 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_2.10.23_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_2.10.23_PM.png)
 
 Now let's push up these changes and see if our tests will pass now in CI.
 
@@ -348,4 +344,4 @@ git push origin github-actions-cypress-tests
 
 Now all of our tests are passing.
 
-![Screen Shot 2021-12-16 at 2.14.31 PM.png](Running%20Ou%207b234/Screen_Shot_2021-12-16_at_2.14.31_PM.png)
+![](/images/tutorials/next-js-and-shopify-store/running-our-tests-with-github-actions/Screen_Shot_2021-12-16_at_2.14.31_PM.png)
